# BFMS

./: README.md  estimate_albedo.py  explore_model2.py  identify_materials.py  plot_original.py  pyproject.toml  segment_image.py
