[project]
name = "bfms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "safetensors>=0.6.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
]
